unpackaged/main/default/objects/Risk_Rule_Result_Decline_Reason_Mapping__mdt/Risk_Rule_Result_Decline_Reason_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Mapping between raw data from Oscilar and a clear format for the Reg B letter.</description>
    <label>Risk Rule Result Decline Reason Mapping</label>
    <pluralLabel>Risk Rule Result Decline Reason Mappings</pluralLabel>
</CustomObject>