unpackaged/main/default/objects/Risk_Rule_Result_Decline_Reason_Mapping__mdt/fields/FICO_Score_Decline__c.field-meta.xml
<CustomField>
    <fullName>FICO_Score_Decline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked for Risk Rule Result Decline Reason Mappings where the FICO score was used in the decision.</description>
    <label>FICO Score Decline</label>
    <type>Checkbox</type>
</CustomField>