unpackaged/main/default/objects/Risk_Rule_Result_Decline_Reason_Mapping__mdt/fields/Incomplete_Application__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked for Risk Rule Result Decline Reason Mappings where the decision results from an incomplete application.</description>
    <label>Incomplete Application</label>
    <type>Checkbox</type>
</CustomField>