unpackaged/main/default/objects/Risk_Rule_Result_Decline_Reason_Mapping__mdt/fields/Reg_B_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reg_B_Decline_Reason__c</fullName>
    <label>Reg B Decline Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>